--- a/index.html
+++ b/index.html
@@ -195,6 +195,18 @@
             </div>
     </section>
 
+    <!----------- YOUR WORLD GAME BOARD --------->
+    <section>
+        <div class="container container_modified">
+            <div class="row">
+                <div class="col-4">
+                     <h2 class="heading text-center mb-3">Your world is the game board, and your mind is at stake.</h2>
+                    <p class="para text-center ff-open-sans px-xxl-5 mx-xl-4 mb-sm-0">At the heart of Ingress is a desire to bring people together through exploration and teamwork.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!----------- FAQ SECTION ---------->
     <section class="faqs position-relative py-5">
         <img class="position-absolute faq_gradient start-0" src="./assets/img/png/faq_gradient.png" hero_btm_blur>
