add content after image and comment extra css

--- a/index.html
+++ b/index.html
@@ -168,47 +168,45 @@
     </section>
 
     <!----------- YOUR WORLD GAME BOARD --------->
-    <section class="py-5">
+    <section class="py-5 mb-5">
         <div class="container px-4 px-lg-0">
             <div class="world-game-heading-box mx-auto">
                 <h2 class="heading text-center mb-3">Your world is the game board, and your mind is at
                     stake.</h2>
-                <p class="para mx-auto ff-open-sans text-center mb-sm-0">At the heart of Ingress is a desire
+                <p class="para mx-auto ff-open-sans text-center mb-0">At the heart of Ingress is a desire
                     to bring people together
                     through exploration and teamwork.</p>
             </div>
         </div>
-        <div>
-            <div class="world-game-slider">
-                <div class="position-relative">
-                    <div class="position-absolute d-flex flex-column justify-content-center px-3 align-items-center center-text-div">
-                        <p class="world-game-img-title text-center fw-bold ">FS 2024-10</p>
-                        <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
+            <div class="world-game-slider mb-5 pb-5 h-100">
+                <div>
+                   <img class="w-100" src="./assets/img/png/world-game-slider-img-1.png" alt="world-game-img">
+                    <div class="center-text-div">
+                        <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
+                        <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday Great day out with fellow agents, celebrating a birthday Great day out with fellow agents, celebrating a birthday Great day out with fellow agents, celebrating a birthday</p>
                     </div>
-                    <img class="w-100" src="./assets/img/png/world-game-slider-img-1.png" alt="world-game-img">
                 </div>
-                <div class="position-relative">
-                    <div class="position-absolute d-flex flex-column justify-content-center px-3 align-items-center center-text-div">
-                        <p class="world-game-img-title text-center fw-bold ">FS 2024-10</p>
-                        <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
-                    </div>
+                <div>
                     <img class="w-100" src="./assets/img/png/world-game-slider-img-2.png" alt="world-game-img">
-                </div>
-                <div class="position-relative">
-                    <div class="position-absolute d-flex flex-column justify-content-center px-3 align-items-center center-text-div">
-                        <p class="world-game-img-title text-center fw-bold ">FS 2024-10</p>
+                    <div class="center-text-div">
+                        <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
                         <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
                     </div>
+                </div>
+                <div>
                     <img class="w-100" src="./assets/img/png/world-game-slider-img-3.png" alt="world-game-img">
+                    <div class="center-text-div">
+                        <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
+                        <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!----------- FAQ SECTION ---------->
     <section class="faqs position-relative py-5">
         <img class="position-absolute faq_gradient start-0" src="./assets/img/png/faq_gradient.png" hero_btm_blur>
-        <div class="container py-xl-5">
+        <div class="container pt-sm-5 py-xl-5">
             <div class="row justify-content-center py-xl-5 my-xxl-5" data-aos="zoom-in">
                 <div class="col-md-9 col-lg-8">
                     <h2 class="heading text-center mb-3">FAQ</h2>
