add minor changes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <!----------- YOUR WORLD GAME BOARD --------->
-    <section class="py-5 mb-5">
+    <section class="py-5 mb-0 mb-xl-5 world-game-section">
         <div class="container px-4 px-lg-0">
             <div class="world-game-heading-box mx-auto">
                 <h2 class="heading text-center mb-3">Your world is the game board, and your mind is at
@@ -183,7 +183,7 @@
                    <img class="w-100" src="./assets/img/png/world-game-slider-img-1.png" alt="world-game-img">
                     <div class="center-text-div">
                         <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
-                        <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday Great day out with fellow agents, celebrating a birthday Great day out with fellow agents, celebrating a birthday Great day out with fellow agents, celebrating a birthday</p>
+                        <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
                     </div>
                 </div>
                 <div>
@@ -206,8 +206,8 @@
     <!----------- FAQ SECTION ---------->
     <section class="faqs position-relative py-5">
         <img class="position-absolute faq_gradient start-0" src="./assets/img/png/faq_gradient.png" hero_btm_blur>
-        <div class="container pt-sm-5 py-xl-5">
-            <div class="row justify-content-center py-xl-5 my-xxl-5" data-aos="zoom-in">
+        <div class="container py-5 py-lg-0">
+            <div class="row justify-content-center" data-aos="zoom-in">
                 <div class="col-md-9 col-lg-8">
                     <h2 class="heading text-center mb-3">FAQ</h2>
                     <p class="para text-center ff-open-sans px-xxl-5 mx-xl-4 mb-sm-0">Frequently Asked Questions to help
