add hover zoom effect in  slider Images

--- a/index.html
+++ b/index.html
@@ -180,21 +180,27 @@
         </div>
             <div class="world-game-slider mb-5 pb-5 h-100">
                 <div>
-                   <img class="w-100" src="./assets/img/png/world-game-slider-img-1.png" alt="world-game-img">
+                    <div class="world-game-img-div">
+                   <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-1.png" alt="world-game-img">
+                    </div>
                     <div class="center-text-div">
                         <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
                         <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
                     </div>
                 </div>
                 <div>
-                    <img class="w-100" src="./assets/img/png/world-game-slider-img-2.png" alt="world-game-img">
+                    <div class="world-game-img-div">
+                    <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-2.png" alt="world-game-img">
+                    </div>
                     <div class="center-text-div">
                         <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
                         <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
                     </div>
                 </div>
                 <div>
-                    <img class="w-100" src="./assets/img/png/world-game-slider-img-3.png" alt="world-game-img">
+                    <div class="world-game-img-div">
+                    <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-3.png" alt="world-game-img">
+                    </div>
                     <div class="center-text-div">
                         <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
                         <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
