--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
                     </a>
                 </div>
             </div>
-    </section>
+        </div>
+        </section>
 
     <!----------- YOUR WORLD GAME BOARD --------->
-    <section class="py-5 mb-0 mb-xl-5 world-game-section">
+    <section class="py-5 mb-0 mb-xl-5 position-relative world-game-section">
         <div class="container px-4 px-lg-0">
+            <!-- HEADING -->
             <div class="world-game-heading-box mx-auto">
                 <h2 class="heading text-center mb-3">Your world is the game board, and your mind is at
                     stake.</h2>
@@ -177,8 +179,9 @@
                     to bring people together
                     through exploration and teamwork.</p>
             </div>
-        </div>
+            <!-- SLIDER -->
             <div class="world-game-slider mb-5 pb-5 h-100">
+                <!-- FIRST SLIDE IMAGE -->
                 <div>
                     <div class="world-game-img-div">
                    <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-1.png" alt="world-game-img">
@@ -188,6 +191,7 @@
                         <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
                     </div>
                 </div>
+                <!-- SECOND SLIDE IMAGE -->
                 <div>
                     <div class="world-game-img-div">
                     <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-2.png" alt="world-game-img">
@@ -197,6 +201,7 @@
                         <p class="text-center world-game-img-description mb-0">Great day out with fellow agents, celebrating a birthday</p>
                     </div>
                 </div>
+                <!-- THIRD SLIDE IMAGE -->
                 <div>
                     <div class="world-game-img-div">
                     <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-3.png" alt="world-game-img">
@@ -207,6 +212,16 @@
                     </div>
                 </div>
             </div>
+            <!-- Slider Arrows -->
+                <div>
+                    <!-- Left Arrow -->
+                    <div class="left-arrow d-flex justify-content-center align-items-center next z-5 position-absolute bg-white p-2"><svg class="right-arrow-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="#39c6fd" d="M32 15H3.41l8.29-8.29-1.41-1.42-10 10a1 1 0 0 0 0 1.41l10 10 1.41-1.41L3.41 17H32z" data-name="4-Arrow Left"/></svg>
+                    </div>
+                    <!-- Right Arrow -->
+                    <div class="right-arrow d-flex justify-content-center align-items-center prev end-0 z-5 position-absolute bg-white p-2"><svg class="right-arrow-svg rotate-180" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="#39c6fd" d="M32 15H3.41l8.29-8.29-1.41-1.42-10 10a1 1 0 0 0 0 1.41l10 10 1.41-1.41L3.41 17H32z" data-name="4-Arrow Left"/></svg>
+                    </div>
+                </div>
+        </div>
     </section>
 
     <!----------- FAQ SECTION ---------->
