--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <!-- THIRD SLIDE -->
                 <div>
                     <div class="world-game-img-div">
-                    <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-3.png" alt="world-game-img">
+                    <img class="w-100 world-game-img" src="https://images.pexels.com/photos/1148998/pexels-photo-1148998.jpeg?auto=compress&cs=tinysrgb&w=600" alt="world-game-img">
                     </div>
                     <div class="center-text-div">
                         <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
@@ -218,7 +218,6 @@
                     <div class="left-arrow d-flex justify-content-center align-items-center next z-5 position-absolute bg-blue p-2"><svg class="left-arrow-svg rotate-180" width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M7.05748e-07 3.59599L3.71814 -1.17773e-06L23.9699 19.5981C24.2963 19.9122 24.5554 20.2856 24.7322 20.6969C24.909 21.1083 25 21.5494 25 21.9949C25 22.4404 24.909 22.8815 24.7322 23.2929C24.5554 23.7042 24.2963 24.0776 23.9699 24.3917L3.71814 44L0.00350482 40.404L19.0112 22L7.05748e-07 3.59599Z" fill="white"/>
                         </svg>
-                        
                     </div>
                     <!-- Right Arrow -->
                     <div class="right-arrow d-flex justify-content-center align-items-center prev end-0 z-5 position-absolute bg-blue p-2"><svg class="right-arrow-svg" width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
