--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <!-- THIRD SLIDE -->
                 <div>
                     <div class="world-game-img-div">
-                    <img class="w-100 world-game-img" src="https://images.pexels.com/photos/1148998/pexels-photo-1148998.jpeg?auto=compress&cs=tinysrgb&w=600" alt="world-game-img">
+                    <img class="w-100 world-game-img" src="./assets/img/png/world-game-slider-img-3.png" alt="world-game-img">
                     </div>
                     <div class="center-text-div">
                         <p class="world-game-img-title text-center fw-bold">FS 2024-10</p>
