--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
 
             <!-- Slider Arrows -->
                     <!-- Left Arrow -->
-                    <div class="left-arrow d-flex justify-content-center align-items-center next z-5 position-absolute bg-blue p-2"><svg class="left-arrow-svg rotate-180" width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <div class="left-arrow d-flex justify-content-center align-items-center prev z-5 position-absolute bg-blue p-2"><svg class="left-arrow-svg rotate-180" width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M7.05748e-07 3.59599L3.71814 -1.17773e-06L23.9699 19.5981C24.2963 19.9122 24.5554 20.2856 24.7322 20.6969C24.909 21.1083 25 21.5494 25 21.9949C25 22.4404 24.909 22.8815 24.7322 23.2929C24.5554 23.7042 24.2963 24.0776 23.9699 24.3917L3.71814 44L0.00350482 40.404L19.0112 22L7.05748e-07 3.59599Z" fill="white"/>
                         </svg>
                     </div>
                     <!-- Right Arrow -->
-                    <div class="right-arrow d-flex justify-content-center align-items-center prev end-0 z-5 position-absolute bg-blue p-2"><svg class="right-arrow-svg" width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <div class="right-arrow d-flex justify-content-center align-items-center next end-0 z-5 position-absolute bg-blue p-2"><svg class="right-arrow-svg" width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M7.05748e-07 3.59599L3.71814 -1.17773e-06L23.9699 19.5981C24.2963 19.9122 24.5554 20.2856 24.7322 20.6969C24.909 21.1083 25 21.5494 25 21.9949C25 22.4404 24.909 22.8815 24.7322 23.2929C24.5554 23.7042 24.2963 24.0776 23.9699 24.3917L3.71814 44L0.00350482 40.404L19.0112 22L7.05748e-07 3.59599Z" fill="white"/>
                         </svg>
                         
